--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mocha": "^5.2.0",
     "mongodb": "^3.1.9",
     "mongoose": "^5.3.11",
+    "multer": "^1.4.1",
     "pug": "^2.0.3"
   }
 }
